...
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/check_box_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
...
            android:layout_weight="1"
            app:icon="@drawable/icon_time"
            android:text="@string/button_end_time" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_done"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
