...

    <!-- ToDo change this to before activities -->
    <string name="no_surveys_title">No wellbeing logs today</string>
    <string name="no_surveys_description">Do you want to complete one?</string>

    <string name="expand_button">Expand</string>
    <string name="add_activity_button">Activity</string>

    <string name="activity_title">Add activity details</string>
    <string name="activity_name">Activity name</string>
    <string name="activity_duration">Activity duration</string>
    <string name="activity_type">Activity type</string>

...

    <string name="minutes">mins</string>
    <string name="hours">hrs</string>

    <string name="survey_summary_title">Summary</string>

    <string name="today_title">Today</string>
    <string name="today_description">Here is how your day is looking so far</string>

    <string name="tracking_dialog_title">Automatic activity tracking</string>
    <string name="tracking_dialog_body">The app can automatically record walking, running, cycling and driving, you just need to enable the following permission.</string>
    <string name="tracking_dialog_positive_button">Next</string>

...
